--- a/roles/ca/defaults/main.yml
+++ b/roles/ca/defaults/main.yml
@@ -11,9 +11,9 @@ ca_system:
   group: step
   home: /opt/step
 
-ca_force: true
+ca_force: false
 
-ca_support_acme: true
+ca_support_acme: false
 
 # e.g. 'cat /dev/urandom | tr -dc 'a-zA-Z0-9' | fold -w 64 | head -n 1'
 ca_init_password: ""
