--- a/roles/certbot/molecule/configured/group_vars/all/vars.yml
+++ b/roles/certbot/molecule/configured/group_vars/all/vars.yml
@@ -1,11 +1,11 @@
 ---
 
-multi_certbot_test_cert: true
-multi_certbot_dry_run: true
-multi_certbot_auto_expand: true
-multi_certbot_staging_args: []
+certbot_test_cert: true
+certbot_dry_run: true
+certbot_auto_expand: true
+certbot_staging_args: []
 
-multi_certbot_tls_certificates:
+certbot_tls_certificates:
   - domain: zweit-hirn.lan
     subdomains: www.zweit-hirn.lan
 
@@ -14,7 +14,7 @@ multi_certbot_tls_certificates:
       - arch.boone-schulz.lan
       - www.boone-schulz.lan
 
-multi_certbot_notification:
+certbot_notification:
   enabled: true
   smtp:
     server_name: "{{ vault__server_name | default('localhost') }}"
