--- a/roles/certbot/tasks/prepare.yml
+++ b/roles/certbot/tasks/prepare.yml
@@ -18,4 +18,19 @@
         - default.yaml
       skip: true
 
+
+- name: detect if certbot installed
+  ansible.builtin.stat:
+    path: /usr/bin/certbot
+    get_checksum: false
+    get_mime: false
+  register: certbot_binary_file
+
+- name: define certbot_installed if certbot installed
+  ansible.builtin.set_fact:
+    certbot_installed: "{{ certbot_binary_file.stat.exists }}"
+  when:
+    - certbot_binary_file is defined
+    - certbot_binary_file.stat is defined
+
 ...
