--- a/roles/certbot/defaults/main.yml
+++ b/roles/certbot/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 
-multi_certbot_config:
+certbot_config:
   conf_directory: /etc/letsencrypt
   www_directory: /var/www/certbot
   well_known_directory: /var/www/certbot/.well-known/acme-challenge
@@ -8,7 +8,7 @@ multi_certbot_config:
   email: pki@test.com
   expire_days_limit: 20
 
-multi_certbot_tls_certificates: []
+certbot_tls_certificates: []
 #  - domain: foo.bar
 #    subdomains: www.foo.bar
 #  - domain: foo-foo.bar
@@ -16,7 +16,7 @@ multi_certbot_tls_certificates: []
 #      - www.foo-foo.bar
 #      - assets.foo-foo.bar
 
-multi_certbot_notification:
+certbot_notification:
   enabled: false
   smtp:
     server_name: localhost      # smtp.example.com
@@ -27,21 +27,30 @@ multi_certbot_notification:
   sender: ""                    # backup@example.com
   recipient: ""                 # admin@foo.bar
 
-multi_certbot_test_cert: true
-multi_certbot_dry_run: true
-multi_certbot_auto_expand: false
+certbot_test_cert: true
+certbot_dry_run: true
+certbot_auto_expand: false
 
-multi_certbot_systemd: {}
+certbot_systemd: {}
 #  use_timer: true
 #  service_name:
 #    timer: certbot.timer
 #    service: certbot.service
 
-multi_certbot_staging_args: []
+certbot_staging_args: []
 #  - --test-cert
 #  - --dry-run
 
-multi_certbot_restart_services: []
+certbot_restart_services: []
 #  - service: nginx
+
+
+certbot_cron:
+  type: systemd       # alternative: cron
+  daemon: ""          # "{{ 'cron' if ansible_os_family | lower == 'debian' else 'cronie' }}"
+  enabled: true       # [true, false]
+  minute: "58"        # 58
+  hour: "2"           # 2
+  weekday: "Mon"      # *
 
 ...
