--- a/roles/step_ca/molecule/default/group_vars/all/vars.yml
+++ b/roles/step_ca/molecule/default/group_vars/all/vars.yml
@@ -1,5 +1,5 @@
 ---
 
-ca_init_password: 9veIqFdRt5SKJAmZXnvU1yqG34NxAXQA4d4lDtkl1vzAYw7yiQfyVVHKEdM7CGGa
+step_ca_init_password: 9veIqFdRt5SKJAmZXnvU1yqG34NxAXQA4d4lDtkl1vzAYw7yiQfyVVHKEdM7CGGa
 
 ...
