--- a/roles/step_ca/molecule/configured/prepare.yml
+++ b/roles/step_ca/molecule/configured/prepare.yml
@@ -29,6 +29,12 @@
       ansible.builtin.package:
         update_cache: true
 
+    - name: make sure iproute2 is installed
+      ansible.builtin.package:
+        name:
+          - iproute2
+        state: present
+
     - name: environment
       ansible.builtin.debug:
         msg:
