--- a/.github/workflows/certbot.yml
+++ b/.github/workflows/certbot.yml
@@ -53,11 +53,11 @@ jobs:
       matrix:
         image:
           - debian:12
+          - debian:13
         ansible-version:
-          - '8.5'
+          - '9.5'
         python_version:
-          - "3.10"
-          - "3.11"
+          - '3.12'
         scenario:
           - default
         collection_role:
@@ -109,11 +109,11 @@ jobs:
         image:
           - ubuntu:20.04
           - ubuntu:22.04
+          - ubuntu:24.04
         ansible-version:
-          - '8.5'
+          - '9.5'
         python_version:
-          - "3.10"
-          - "3.11"
+          - '3.12'
         scenario:
           - default
         collection_role:
@@ -165,9 +165,9 @@ jobs:
         image:
           - debian:12
         ansible-version:
-          - '8.5'
+          - '9.5'
         python_version:
-          - "3.11"
+          - '3.12'
         scenario:
           - configured
         collection_role:
